--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body,html {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,11 +6,19 @@ body,html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
    background-color : #607D8B ;
+   overflow-x: hidden;
    
 }
-
+body,html{
+  height: 100vh;
+  width: 100vw;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root{
+  height: 100%;
+  width: 100%;
 
+}
