--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,34 @@
+/* @font-face {
+  font-family: "Pokemon Solid";
+  src: url("./fonts/PokemonSolid.ttf");
+}
+
+@font-face {
+  font-family: "Pokemon Hollow";
+  src: url("./fonts/PokemonHollow.ttf");
+} */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-   background-color : #607D8B ;
-   overflow-x: hidden;
-   
+  background-color: #607d8b;
+  overflow-x: hidden;
 }
-body,html{
+body,
+html {
   height: 100vh;
   width: 100vw;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-#root{
+#root {
   height: 100%;
   width: 100%;
-
 }
+
